[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Icons/coin.png" type="Texture" id=1]
[ext_resource path="res://fonts/ld53/ld52_def_xlarge.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/MapUI.gd" type="Script" id=3]
[ext_resource path="res://Scenes/DronePopupDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/ld53/ld52_def_small.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Icons/play.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/restart.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/fastforward.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/calendar.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.792157, 0.764706, 0.752941 )
border_width_left = 4
border_width_top = 4
border_width_bottom = 4
border_color = Color( 0.890625, 1, 0.981177, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.792157, 0.764706, 0.117647 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.890625, 1, 0.981177, 1 )

[sub_resource type="Image" id=9]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0, 0, 5, 0, 0, 0, 8, 0, 0, 0, 10, 0, 0, 0, 11, 0, 0, 0, 11, 0, 0, 0, 11, 0, 0, 0, 11, 0, 0, 0, 10, 0, 0, 0, 8, 0, 0, 0, 5, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0, 10, 0, 0, 0, 19, 0, 0, 0, 25, 0, 0, 0, 31, 0, 0, 0, 34, 0, 0, 0, 35, 0, 0, 0, 35, 0, 0, 0, 34, 0, 0, 0, 31, 0, 0, 0, 25, 0, 0, 0, 19, 0, 0, 0, 10, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0, 0, 10, 0, 0, 0, 22, 0, 0, 0, 39, 0, 0, 0, 53, 0, 0, 0, 63, 0, 0, 0, 69, 0, 0, 0, 70, 0, 0, 0, 70, 0, 0, 0, 69, 0, 0, 0, 63, 0, 0, 0, 53, 0, 0, 0, 39, 0, 0, 0, 22, 0, 0, 0, 10, 0, 0, 0, 3, 0, 0, 0, 5, 0, 0, 0, 19, 0, 0, 0, 39, 59, 59, 67, 148, 66, 66, 75, 245, 62, 62, 71, 250, 62, 62, 70, 251, 62, 62, 70, 251, 62, 62, 70, 251, 62, 62, 70, 251, 62, 62, 71, 250, 66, 66, 75, 245, 59, 59, 67, 148, 0, 0, 0, 39, 0, 0, 0, 19, 0, 0, 0, 5, 0, 0, 0, 8, 0, 0, 0, 25, 0, 0, 0, 53, 65, 65, 74, 245, 47, 47, 54, 255, 45, 45, 51, 255, 45, 45, 51, 255, 45, 45, 51, 255, 45, 45, 51, 255, 45, 45, 51, 255, 45, 45, 51, 255, 47, 47, 54, 255, 65, 65, 74, 245, 0, 0, 0, 53, 0, 0, 0, 25, 0, 0, 0, 8, 0, 0, 0, 10, 0, 0, 0, 31, 0, 0, 0, 64, 61, 61, 69, 252, 45, 45, 51, 255, 44, 44, 50, 255, 44, 44, 50, 255, 44, 44, 50, 255, 44, 44, 50, 255, 44, 44, 50, 255, 44, 44, 50, 255, 45, 45, 51, 255, 61, 61, 69, 252, 0, 0, 0, 64, 0, 0, 0, 31, 0, 0, 0, 10, 0, 0, 0, 11, 0, 0, 0, 34, 0, 0, 0, 69, 59, 59, 67, 251, 44, 44, 50, 255, 43, 43, 49, 255, 43, 43, 49, 255, 43, 43, 49, 255, 43, 43, 49, 255, 43, 43, 49, 255, 43, 43, 49, 255, 44, 44, 50, 255, 59, 59, 67, 251, 0, 0, 0, 69, 0, 0, 0, 34, 0, 0, 0, 11, 0, 0, 0, 11, 0, 0, 0, 35, 0, 0, 0, 70, 58, 58, 66, 251, 42, 42, 49, 255, 42, 42, 48, 255, 42, 42, 48, 255, 42, 42, 48, 255, 42, 42, 48, 255, 42, 42, 48, 255, 42, 42, 48, 255, 42, 42, 49, 255, 58, 58, 66, 251, 0, 0, 0, 70, 0, 0, 0, 35, 0, 0, 0, 11, 0, 0, 0, 11, 0, 0, 0, 35, 0, 0, 0, 70, 56, 56, 65, 251, 41, 41, 48, 255, 41, 41, 47, 255, 41, 41, 47, 255, 41, 41, 47, 255, 41, 41, 47, 255, 41, 41, 47, 255, 41, 41, 47, 255, 41, 41, 48, 255, 56, 56, 65, 251, 0, 0, 0, 70, 0, 0, 0, 35, 0, 0, 0, 11, 0, 0, 0, 11, 0, 0, 0, 34, 0, 0, 0, 69, 55, 55, 62, 251, 40, 40, 46, 255, 40, 40, 45, 255, 40, 40, 45, 255, 40, 40, 45, 255, 40, 40, 45, 255, 40, 40, 45, 255, 40, 40, 45, 255, 40, 40, 46, 255, 55, 55, 62, 251, 0, 0, 0, 69, 0, 0, 0, 34, 0, 0, 0, 11, 0, 0, 0, 10, 0, 0, 0, 31, 0, 0, 0, 64, 54, 54, 61, 252, 39, 39, 45, 255, 39, 39, 44, 255, 39, 39, 44, 255, 39, 39, 44, 255, 39, 39, 44, 255, 39, 39, 44, 255, 39, 39, 44, 255, 39, 39, 45, 255, 53, 53, 60, 252, 0, 0, 0, 64, 0, 0, 0, 31, 0, 0, 0, 10, 0, 0, 0, 8, 0, 0, 0, 26, 0, 0, 0, 53, 56, 56, 64, 245, 41, 41, 46, 255, 39, 39, 44, 255, 38, 38, 44, 255, 38, 38, 44, 255, 38, 38, 44, 255, 38, 38, 44, 255, 39, 39, 44, 255, 41, 41, 46, 255, 56, 56, 64, 246, 0, 0, 0, 53, 0, 0, 0, 26, 0, 0, 0, 8, 0, 0, 0, 5, 0, 0, 0, 19, 0, 0, 0, 39, 49, 49, 56, 149, 56, 56, 64, 245, 52, 52, 59, 250, 52, 52, 59, 251, 52, 52, 59, 251, 52, 52, 59, 251, 52, 52, 59, 251, 52, 52, 59, 250, 57, 57, 63, 244, 49, 49, 56, 148, 0, 0, 0, 39, 0, 0, 0, 19, 0, 0, 0, 5, 0, 0, 0, 3, 0, 0, 0, 10, 0, 0, 0, 22, 0, 0, 0, 39, 0, 0, 0, 53, 0, 0, 0, 64, 0, 0, 0, 69, 0, 0, 0, 70, 0, 0, 0, 70, 0, 0, 0, 69, 0, 0, 0, 63, 0, 0, 0, 53, 0, 0, 0, 39, 0, 0, 0, 22, 0, 0, 0, 10, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0, 10, 0, 0, 0, 19, 0, 0, 0, 25, 0, 0, 0, 31, 0, 0, 0, 34, 0, 0, 0, 35, 0, 0, 0, 35, 0, 0, 0, 34, 0, 0, 0, 31, 0, 0, 0, 25, 0, 0, 0, 19, 0, 0, 0, 10, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0, 0, 5, 0, 0, 0, 8, 0, 0, 0, 10, 0, 0, 0, 11, 0, 0, 0, 11, 0, 0, 0, 11, 0, 0, 0, 11, 0, 0, 0, 10, 0, 0, 0, 8, 0, 0, 0, 5, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 9 )
size = Vector2( 16, 16 )

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id=4]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id=5]
default_font = ExtResource( 5 )
PopupDialog/styles/panel = SubResource( 3 )
PopupPanel/styles/panel = SubResource( 4 )

[node name="MapUI" type="CanvasLayer"]
layer = 2
script = ExtResource( 3 )
np_day_label = NodePath("MarginContainer/StatPanel/DatePanel/DayLabel")
np_money_label = NodePath("MarginContainer/StatPanel/MoneyPanel/MoneyLabel")
np_confirmation_dialog = NodePath("ConfirmationDialog")
np_drone_popup = NodePath("DronePopupDialog")
np_delivery_phase_info_label = NodePath("BottomControls/CenterMarginContainer/HBoxContainer/VBoxContainer/PhaseInfoLabel")
np_delivery_phase_progress_bar = NodePath("BottomControls/CenterMarginContainer/HBoxContainer/VBoxContainer/DayProgressBar")

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 127.0
margin_bottom = 160.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="StatPanel" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 137.0
margin_bottom = 176.0
custom_constants/separation = 10

[node name="DatePanel" type="HBoxContainer" parent="MarginContainer/StatPanel"]
margin_right = 127.0
margin_bottom = 78.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/StatPanel/DatePanel"]
margin_right = 78.0
margin_bottom = 78.0
rect_min_size = Vector2( 78, 78 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="DayLabel" type="Label" parent="MarginContainer/StatPanel/DatePanel"]
margin_left = 82.0
margin_right = 127.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="MoneyPanel" type="HBoxContainer" parent="MarginContainer/StatPanel"]
margin_top = 88.0
margin_right = 127.0
margin_bottom = 166.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/StatPanel/MoneyPanel"]
margin_right = 78.0
margin_bottom = 78.0
rect_min_size = Vector2( 78, 78 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="MoneyLabel" type="Label" parent="MarginContainer/StatPanel/MoneyPanel"]
margin_left = 82.0
margin_right = 127.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="BottomControls" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -90.0
margin_bottom = 6.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="CenterMarginContainer" type="MarginContainer" parent="BottomControls"]
margin_left = 390.0
margin_top = 10.0
margin_right = 1530.0
margin_bottom = 86.0
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="BottomControls/CenterMarginContainer"]
margin_right = 1140.0
margin_bottom = 76.0
size_flags_vertical = 3

[node name="ResetButton" type="Button" parent="BottomControls/CenterMarginContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 76 )
focus_mode = 0
size_flags_vertical = 2
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="BottomControls/CenterMarginContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 980.0
margin_bottom = 76.0
rect_min_size = Vector2( 900, 70 )

[node name="PhaseInfoLabel" type="Label" parent="BottomControls/CenterMarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 900.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 5 )
text = "Delivery in Progress!"
align = 1
valign = 1

[node name="DayProgressBar" type="ProgressBar" parent="BottomControls/CenterMarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 900.0
margin_bottom = 64.0
rect_min_size = Vector2( 900, 30 )
size_flags_vertical = 1
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 50.0
percent_visible = false

[node name="PlayButton" type="Button" parent="BottomControls/CenterMarginContainer/HBoxContainer"]
margin_left = 984.0
margin_right = 1060.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 76 )
focus_mode = 0
size_flags_vertical = 2
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="ForwardButton" type="Button" parent="BottomControls/CenterMarginContainer/HBoxContainer"]
margin_left = 1064.0
margin_right = 1140.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 76 )
focus_mode = 0
size_flags_vertical = 2
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
theme = SubResource( 5 )
popup_exclusive = true

[node name="DronePopupDialog" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="BottomControls/CenterMarginContainer/HBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="BottomControls/CenterMarginContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="BottomControls/CenterMarginContainer/HBoxContainer/ForwardButton" to="." method="_on_ForwardButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
